--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
     "name": "pixelbot.js",
-    "version": "1.0.0",
     "main": "src/index.js",
     "keywords": [],
     "author": "Oskar Manhart",
-    "license": "ISC",
+    "license": "GPLv3",
     "scripts": {
         "start": "node src/index.js"
     },
