--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "discord.js": "13.3.1",
         "dotenv": "^10.0.0",
+        "hastebin": "^0.2.1",
         "isprofanity": "^1.4.1",
         "leo-profanity": "^1.5.0",
         "mcping-js": "^1.5.0",
