--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "node src/index.js"
     },
     "dependencies": {
+        "body-parser": "^1.19.2",
         "discord.js": "13.3.1",
         "dotenv": "^10.0.0",
         "express": "^4.17.3",
