--- a/package.json
+++ b/package.json
@@ -13,12 +13,10 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.3",
         "hastebin": "^0.2.1",
-        "isprofanity": "^1.4.1",
-        "leo-profanity": "^1.5.0",
         "mcping-js": "^1.5.0",
         "node-fetch": "^2.6.6",
         "sha256": "^0.2.0",
-        "swearjar": "^0.2.0"
+        "sqlite3": "^5.0.2"
     },
     "repository": {
         "type": "git",
